bpo-35798: Fix duplicate SyntaxWarning: "is" with a literal.